feat: ヘッダーにトップへ戻るボタンを設置

--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -2,7 +2,16 @@
 ---
 
 <header class="root">
-  <div class="inner">ヘッダー</div>
+  <div class="inner">
+    <a
+      href="/"
+      title="トップページへのリンク"
+    >
+      ロゴ
+    </a>
+
+    <p>ヘッダー</p>
+  </div>
 </header>
 
 <style lang="scss">
