--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -1,5 +1,5 @@
-@forward 'main';
-@forward 'modal';
-@forward 'section';
-@forward 'tab';
-@forward 'toggle';
+@forward "main";
+@forward "modal";
+@forward "section";
+@forward "tab";
+@forward "toggle";
