--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
-@use 'global' as g;
+@use "global" as g;
 
 button {
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    appearance: none;
-    cursor: pointer;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  appearance: none;
+  cursor: pointer;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
