--- a/src/style/components/_modal.scss
+++ b/src/style/components/_modal.scss
@@ -1,33 +1,33 @@
 @charset "utf-8";
 
-@use '../global' as g;
+@use "../global" as g;
 
 .modal {
-    @at-root {
-        // ---------- ブロックの基底要素 ----------
-        // .modal {
-        // }
+  @at-root {
+    // ---------- ブロックの基底要素 ----------
+    // .modal {
+    // }
 
-        // ---------- ボタン部分 ----------
-        // .modal__openButton {}
+    // ---------- ボタン部分 ----------
+    // .modal__openButton {}
 
-        .modal__button__text {
-            @include g.visibilityHidden();
-        }
-
-        // ---------- 本体部分 ----------
-        // .modal__body {
-        // }
-
-        // ---------- 透過背景 ----------
-        .modal__overlay {
-            background: rgba(0, 0, 0, .8);
-            position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            z-index: 99;
-        }
+    .modal__button__text {
+      @include g.visibilityHidden();
     }
+
+    // ---------- 本体部分 ----------
+    // .modal__body {
+    // }
+
+    // ---------- 透過背景 ----------
+    .modal__overlay {
+      background: rgba(0, 0, 0, 0.8);
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 99;
+    }
+  }
 }
