--- a/src/style/global/mixin/_mediaQuery.scss
+++ b/src/style/global/mixin/_mediaQuery.scss
@@ -1,22 +1,21 @@
 @charset "utf-8";
 
-@use '../variables' as var;
-
+@use "../variables" as var;
 
 // ========== responsive ==========
 $breakpoints: (
-    'op': '(max-width: 768px)',
-    'pc': '(min-width: 768px)'
+  "sp": "(max-width: 768px)",
+  "pc": "(min-width: 768px)",
 ) !default;
 
 @mixin mediaQuery($breakpoint: pc) {
-    @if $breakpoint == 'sp' {
-        @media screen and #{map-get($breakpoints, $breakpoint)} {
-            @content;
-        }
-    } @else {
-        @media print, screen and #{map-get($breakpoints, $breakpoint)} {
-            @content;
-        }
+  @if $breakpoint == "sp" {
+    @media screen and #{map-get($breakpoints, $breakpoint)} {
+      @content;
     }
+  } @else {
+    @media print, screen and #{map-get($breakpoints, $breakpoint)} {
+      @content;
+    }
+  }
 }
