--- a/src/style/global/mixin/_pxToVw.scss
+++ b/src/style/global/mixin/_pxToVw.scss
@@ -1,20 +1,19 @@
 @charset "utf-8";
 @use "sass:math";
-@use '../variables' as v;
-
+@use "../variables" as v;
 
 // ========== px to vw ==========
 // 引数の px を vw に変換して返す
-@function pxToVw($px, $device: 'sp') {
-    $contentSize: 0;
+@function pxToVw($px, $device: "sp") {
+  $contentSize: 0;
 
-    @if $device == 'sp' {
-        $contentSize: v.$content-width;
-    } @else if $device == 'pc' {
-        $contentSize: v.$content-width-pc;
-    } @else {
-        $contentSize: v.$content-width;
-    }
+  @if $device == "sp" {
+    $contentSize: v.$content-width;
+  } @else if $device == "pc" {
+    $contentSize: v.$content-width-pc;
+  } @else {
+    $contentSize: v.$content-width;
+  }
 
-    @return math.div($px, $contentSize) * 100vw;
+  @return math.div($px, $contentSize) * 100vw;
 }
