feat: CSS の MediaQuery を range 記法に変更

--- a/src/style/global/_variables.scss
+++ b/src/style/global/_variables.scss
@@ -21,5 +21,6 @@ $content-margin-pc: 30px;
 $content-size: $content-width-pc + ($content-margin * 2);
 
 // ========== break point ==========
+$breakpoint: 768px;
 
 // ========== mobile first ==========
