--- a/src/style/global/_variables.scss
+++ b/src/style/global/_variables.scss
@@ -1,12 +1,16 @@
 @charset "utf-8";
 
-// ========== base ==========
+// ========== base color ==========
 $base-color: #333;
 
 // ========== color ==========
 
-// ========== text ==========
+// ========== text color ==========
 $base-text-color: #333;
+
+// ========== font ==========
+$font-size: 14px;
+$font-size-pc: 16px;
 
 // ========== gradation ==========
 
