refactor: Modal.ts の不要なメソッドを削除

--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -19,6 +19,8 @@ const uniqueId = uuid();
     class="button modal__button"
   >
     {buttonText.map(item => <span>{item}</span>)}
+
+    <span class="modal__button__text">開く</span>
   </button>
 
   <div
@@ -33,7 +35,10 @@ const uniqueId = uuid();
 
       {bodyText.map(item => <p>{item}</p>)}
 
-      <!-- <a href="__dummy__">ダミーリンク</a> -->
+      <a href="__dummy__">ダミーリンク</a>
+      <a href="__dummy__">ダミーリンク</a>
+      <a href="__dummy__">ダミーリンク</a>
+      <a href="__dummy__">ダミーリンク</a>
     </div>
   </div>
 </div>
