--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -6,7 +6,7 @@
 </footer>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
