--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -15,7 +15,7 @@
 </header>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
