--- a/src/components/parts/AccordionItem.astro
+++ b/src/components/parts/AccordionItem.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "@src/config";
+import { SITE } from '@src/config';
 const { rootPath } = SITE;
 
 export interface Props {
@@ -31,7 +31,7 @@ const { buttonText, bodyText } = Astro.props;
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
@@ -73,7 +73,7 @@ const { buttonText, bodyText } = Astro.props;
     // 十字線
     &::before,
     &::after {
-      content: "";
+      content: '';
       display: block;
       background: g.$base-color;
       width: g.rem(15px);
@@ -96,7 +96,7 @@ const { buttonText, bodyText } = Astro.props;
   }
 
   // ---------- アコーディオン本体要素が開いているとき ----------
-  .button[aria-expanded="true"] {
+  .button[aria-expanded='true'] {
     .button__mark::before {
       transform: rotate(0);
     }
