--- a/src/components/parts/Text.astro
+++ b/src/components/parts/Text.astro
@@ -7,17 +7,11 @@ const { text } = Astro.props;
 ---
 
 <div class="root">
-  {
-    text.map(item => (
-      <p
-        set:html={item}
-      />
-    ))
-  }
+  {text.map(item => <p set:html={item} />)}
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
