--- a/src/components/parts/TextTransition.astro
+++ b/src/components/parts/TextTransition.astro
@@ -13,7 +13,7 @@ const { text } = Astro.props;
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
