--- a/src/components/templates/Accordion.astro
+++ b/src/components/templates/Accordion.astro
@@ -1,5 +1,5 @@
 ---
-import AccordionItem from "../parts/AccordionItem.astro";
+import AccordionItem from '../parts/AccordionItem.astro';
 ---
 
 <div class="root accordion">
@@ -28,7 +28,7 @@ import AccordionItem from "../parts/AccordionItem.astro";
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
