--- a/src/pages/checker/index.astro
+++ b/src/pages/checker/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Section from "@src/components/common/Section.astro";
-import Heading from "@src/components/parts/Heading.astro";
-import Checker from "@src/components/checker/Checker.vue";
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Section from '@src/components/common/Section.astro';
+import Heading from '@src/components/parts/Heading.astro';
+import Checker from '@src/components/checker/Checker.vue';
 ---
 
 <BaseLayout
@@ -22,7 +22,7 @@ import Checker from "@src/components/checker/Checker.vue";
 </BaseLayout>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 </style>
 
 <script></script>
