--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Section from "@src/components/common/Section.astro";
-import Heading from "@src/components/parts/Heading.astro";
-import Text from "@src/components/parts/Text.astro";
-import ListLink from "@src/components/parts/ListLink.astro";
-import Posts from "@src/components/templates/Posts.astro";
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Section from '@src/components/common/Section.astro';
+import Heading from '@src/components/parts/Heading.astro';
+import Text from '@src/components/parts/Text.astro';
+import ListLink from '@src/components/parts/ListLink.astro';
+import Posts from '@src/components/templates/Posts.astro';
 ---
 
 <BaseLayout
@@ -19,7 +19,7 @@ import Posts from "@src/components/templates/Posts.astro";
         text="トップページ"
       />
 
-      <Text text={["テキストテキストテキスト", "テキストテキスト<sup>※</sup>テキストテキスト"]} />
+      <Text text={['テキストテキストテキスト', 'テキストテキスト<sup>※</sup>テキストテキスト']} />
 
       <Heading
         level={2}
@@ -27,18 +27,16 @@ import Posts from "@src/components/templates/Posts.astro";
       />
 
       <ListLink
-        link={
-          [
-            {
-              href: '/dev/pagelist/',
-              text: 'ページ一覧',
-            },
-            {
-              href: '/dev/components/',
-              text: 'コンポーネント一覧',
-            }
-          ]
-        }
+        link={[
+          {
+            href: '/dev/pagelist/',
+            text: 'ページ一覧',
+          },
+          {
+            href: '/dev/components/',
+            text: 'コンポーネント一覧',
+          },
+        ]}
       />
 
       <Posts />
