--- a/src/style/components/_textTransition.scss
+++ b/src/style/components/_textTransition.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@use "../global" as g;
+@use '../global' as g;
 
 .textTransition {
   @at-root {
@@ -18,7 +18,7 @@
       background-repeat: no-repeat;
       background-clip: text;
       color: transparent;
-      transition: background .8s ease-in-out;
+      transition: background 0.8s ease-in-out;
     }
 
     .passedTextTransition {
@@ -26,4 +26,3 @@
     }
   }
 }
-
