--- a/src/style/global/mixin/_index.scss
+++ b/src/style/global/mixin/_index.scss
@@ -1,8 +1,8 @@
-@forward "centering";
-@forward "heading-content";
-@forward "hover";
-@forward "mediaQuery";
-@forward "pxToVw";
-@forward "rem";
-@forward "reset-margin";
-@forward "visibility-hidden";
+@forward 'centering';
+@forward 'heading-content';
+@forward 'hover';
+@forward 'mediaQuery';
+@forward 'pxToVw';
+@forward 'rem';
+@forward 'reset-margin';
+@forward 'visibility-hidden';
