--- a/src/components/parts/ListLink.astro
+++ b/src/components/parts/ListLink.astro
@@ -28,7 +28,7 @@ const { link } = Astro.props;
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
@@ -42,7 +42,7 @@ const { link } = Astro.props;
   .list {
     display: flex;
     flex-direction: column;
-    gap: .6em;
+    gap: 0.6em;
   }
 
   .item {
@@ -50,12 +50,12 @@ const { link } = Astro.props;
   }
 
   .item::before {
-    content: "";
+    content: '';
     display: block;
-    width: .4em;
-    height: .4em;
-    margin-top: .6em;
-    margin-right: .5em;
+    width: 0.4em;
+    height: 0.4em;
+    margin-top: 0.6em;
+    margin-right: 0.5em;
     background: g.$base-text-color;
     border-radius: 50vh;
   }
@@ -63,6 +63,6 @@ const { link } = Astro.props;
   // ---------- リンク要素 ----------
   .link {
     text-decoration: underline;
-    text-underline-offset: .3em;
+    text-underline-offset: 0.3em;
   }
 </style>
