--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -42,7 +42,7 @@ const uuid = uuidv4();
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
@@ -54,7 +54,7 @@ const uuid = uuidv4();
   }
 
   // ---------- モーダルを開くボタンが押されたとき ----------
-  .button[aria-expanded="true"] {
+  .button[aria-expanded='true'] {
   }
 
   // ---------- モーダル本体要素 ----------
@@ -72,7 +72,7 @@ const uuid = uuidv4();
     transition: visibility 0.4s ease;
   }
 
-  .modal__body[aria-hidden="false"] {
+  .modal__body[aria-hidden='false'] {
     display: flex;
     visibility: visible;
   }
@@ -91,7 +91,7 @@ const uuid = uuidv4();
     }
   }
 
-  .modal__body[aria-hidden="false"] .modal__body__inner {
+  .modal__body[aria-hidden='false'] .modal__body__inner {
     opacity: 1;
   }
 </style>
