--- a/src/components/templates/Posts.astro
+++ b/src/components/templates/Posts.astro
@@ -1,5 +1,5 @@
 ---
-const posts = await Astro.glob("../../pages/posts/*.md");
+const posts = await Astro.glob('../../pages/posts/*.md');
 ---
 
 <div class="root">
@@ -15,7 +15,7 @@ const posts = await Astro.glob("../../pages/posts/*.md");
 </div>
 
 <style lang="scss">
-  @use "../../style/global" as g;
+  @use '../../style/global' as g;
 
   // ---------- 基底要素 ----------
   .root {
