--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
-import "../style/style.scss";
-import { SITE } from "@src/config";
-import Header from "@components/common/Header.astro";
-import Footer from "@components/common/Footer.astro";
+import '../style/style.scss';
+import { SITE } from '@src/config';
+import Header from '@components/common/Header.astro';
+import Footer from '@components/common/Footer.astro';
 
 export interface Props {
   title?: string;
@@ -93,5 +93,5 @@ const socialImageURL = new URL(ogImage ? ogImage : SITE.ogImage, SITE.urlOrigin)
 </html>
 
 <script>
-  import "@src/script/main.js";
+  import '@src/script/main.js';
 </script>
