--- a/src/pages/checker/result/index.astro
+++ b/src/pages/checker/result/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Section from "@src/components/common/Section.astro";
-import Heading from "@src/components/parts/Heading.astro";
-import CheckerResult from "@src/components/checker/CheckerResult.vue";
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Section from '@src/components/common/Section.astro';
+import Heading from '@src/components/parts/Heading.astro';
+import CheckerResult from '@src/components/checker/CheckerResult.vue';
 ---
 
 <BaseLayout
@@ -22,7 +22,7 @@ import CheckerResult from "@src/components/checker/CheckerResult.vue";
 </BaseLayout>
 
 <style lang="scss">
-  @use "../../../style/global" as g;
+  @use '../../../style/global' as g;
 </style>
 
 <script></script>
