--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -1,6 +1,6 @@
-@forward "main";
-@forward "modal";
-@forward "section";
-@forward "textTransition";
-@forward "tab";
-@forward "toggle";
+@forward 'main';
+@forward 'modal';
+@forward 'section';
+@forward 'textTransition';
+@forward 'tab';
+@forward 'toggle';
