--- a/src/style/components/_toggle.scss
+++ b/src/style/components/_toggle.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@use "../global" as g;
+@use '../global' as g;
 
 .toggle {
   @at-root {
@@ -25,8 +25,8 @@
     }
 
     // ---------- トグルの本体が閉じているとき ----------
-    .toggle__body[aria-hidden="true"],
-    .accordionItem__body[aria-hidden="true"] {
+    .toggle__body[aria-hidden='true'],
+    .accordionItem__body[aria-hidden='true'] {
       visibility: hidden;
       height: 0;
       margin: 0;
