--- a/src/style/global/mixin/_mediaQuery.scss
+++ b/src/style/global/mixin/_mediaQuery.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
-@use "../variables" as var;
+@use '../variables' as var;
 
 // ========== responsive ==========
 $breakpoints: (
-  "sp": "(width <= " + var.$breakpoint  + ")",
-  "pc": "(width >= " + var.$breakpoint  + ")",
+  'sp': '(width <= ' + var.$breakpoint + ')',
+  'pc': '(width >= ' + var.$breakpoint + ')',
 ) !default;
 
-@mixin mediaQuery($breakpoint: "pc") {
-  @if $breakpoint == "sp" {
+@mixin mediaQuery($breakpoint: 'pc') {
+  @if $breakpoint == 'sp' {
     @media screen and #{map-get($breakpoints, $breakpoint)} {
       @content;
     }
