refactor: sass の mixin の説明文を追記

--- a/src/style/global/mixin/_centering.scss
+++ b/src/style/global/mixin/_centering.scss
@@ -4,6 +4,10 @@
 @use './mediaQuery' as mq;
 
 // ========== position ==========
+// コンテンツを中央寄せにする
+// コンテンツの最大値を設定するため、
+// variables.scss の $content-width と $content-width-pc に
+// 正しい数値を設定することが必要
 @mixin centering() {
   width: 100%;
   max-width: v.$content-size;
