--- a/src/style/global/mixin/_pxToVw.scss
+++ b/src/style/global/mixin/_pxToVw.scss
@@ -3,7 +3,10 @@
 @use '../variables' as v;
 
 // ========== px to vw ==========
-// 引数の px を vw に変換して返す
+// 引数の数値（pxの実数値） を vw に変換して返す
+// 計算式にコンテンツのサイズが必要なので、
+// variables.scss の $content-width と $content-width-pc に
+// 正しい数値を設定することが必要
 @function pxToVw($px, $device: 'sp') {
   $contentSize: 0;
 
