feat: button 要素の type 属性の値は button に設定する

--- a/src/components/parts/Tab.astro
+++ b/src/components/parts/Tab.astro
@@ -3,8 +3,8 @@
 
 <div class="root tab">
   <div class="tab__button__wrap">
-    <button class="tab__button">タブボタン1</button>
-    <button class="tab__button">タブボタン2</button>
+    <button type="button" class="tab__button">タブボタン1</button>
+    <button type="button" class="tab__button">タブボタン2</button>
   </div>
 
   <div class="tab__body__wrap">
