feat: Accordion コンポーネントとの対比のために Toggle コンポーネントの設置数を増やす

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -203,6 +203,11 @@ import TextTransition from '@src/components/parts/TextTransition.astro';
         bodyText={['テキストテキストテキスト', 'テキストテキスト']}
       />
 
+      <Toggle
+        buttonText="トグルボタン"
+        bodyText={['テキストテキストテキスト', 'テキストテキスト']}
+      />
+
       <Heading
         level={3}
         text="コンポーネント説明"
