feat: List コンポーネント内のテキストに URL がある場合、それを a 要素にするように修正

--- a/src/components/parts/LinkButton.astro
+++ b/src/components/parts/LinkButton.astro
@@ -53,6 +53,7 @@ const { text, href, blank } = Astro.props;
     color: #fff;
     font-size: g.rem(20px);
     font-weight: 500;
+    text-decoration: none;
     transform: translateZ(0);
     transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
     position: relative;
