--- a/src/components/parts/List.astro
+++ b/src/components/parts/List.astro
@@ -4,6 +4,14 @@ export interface Props {
 }
 
 const { text } = Astro.props;
+const convertLink = (str: string) => {
+  const regexpUrl = /https?:\/\/[a-zA-Z0-9.\-_@:/~?%&;=+#',()*!]+/g;
+  const regexpMakeLink = (url: string) => {
+    return `<a href="${url}">${url}</a>`;
+  };
+
+  return str.replace(regexpUrl, regexpMakeLink);
+}
 ---
 
 <div class="root">
@@ -12,7 +20,7 @@ const { text } = Astro.props;
       text.map(item => (
         <li
           class="item"
-          set:html={item}
+          set:html={convertLink(item)}
         />
       ))
     }
