--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -340,6 +340,9 @@ import TextTransition from '@src/components/parts/TextTransition.astro';
       <List
         text={[
           'ライブラリのsplide.js（https://ja.splidejs.com/）を使用しています',
+          '以下2つの処理のうちどちらかを行う必要がある',
+          'カルーセルのルート要素に aria-label で簡易的なラベルを設定する',
+          'カルーセルに対して適切な見出し要素がある場合は、 aria-labelledby で両者を関連付ける',
         ]}
       />
     </Section>
