feat: Toggle コンポーネントを details 要素、 summary 要素を使用したものに変更

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -38,5 +38,14 @@ a {
   color: g.$base-text-color;
 }
 
+summary {
+  display: block;
+
+  // Safari で表示されるデフォルトのアイコンを非表示にする
+  &::-webkit-details-marker {
+    display: none;
+  }
+}
+
 // :where(:focus-visible) {
 // }
