feat: ライブラリの lenis を使用した慣性スクロールのページを作成

--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -22,6 +22,9 @@ import Heading from '@src/components/parts/Heading.astro';
         <li>
           <a href="components/">コンポーネントリスト</a>
         </li>
+        <li>
+          <a href="momentumScrolling/">慣性スクロール</a>
+        </li>
       </ul>
     </Section>
   </main>
