--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,10 @@ import Posts from '@src/components/templates/Posts.astro';
       <ListLink
         link={[
           {
+            href: '/dev/',
+            text: '開発用ページ',
+          },
+          {
             href: '/dev/pagelist/',
             text: 'ページ一覧',
           },
