--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,16 +8,25 @@ export interface Props {
   title?: string;
   description?: string;
   ogImage?: string;
+  useLenis?: boolean;
 }
 
-const { title = SITE.title, description = SITE.description, ogImage = SITE.ogImage } = Astro.props;
+const {
+  title = SITE.title,
+  description = SITE.description,
+  ogImage = SITE.ogImage,
+  useLenis = false, // Lenis を使用するには scroll-behavior: smooth; を無効にする必要がある
+} = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, SITE.urlOrigin);
 const socialImageURL = new URL(ogImage ? ogImage : SITE.ogImage, SITE.urlOrigin).href;
 ---
 
 <!DOCTYPE html>
-<html lang="ja">
+<html
+  lang="ja"
+  class={useLenis ? 'useLenis' : ''}
+>
   <head>
     <meta charset="UTF-8" />
     <meta
