--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap');
 
-:root {
+:root:not(.useLenis) {
   scroll-behavior: smooth;
 }
 
