--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -49,3 +49,24 @@ summary {
 
 // :where(:focus-visible) {
 // }
+
+// Lenis 用のスタイル
+html.lenis {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
