feat: 慣性スクロールページについての記述を追加

--- a/src/pages/dev/momentumScrolling/index.astro
+++ b/src/pages/dev/momentumScrolling/index.astro
@@ -25,8 +25,7 @@ import List from '@src/components/parts/List.astro';
 
       <List
         text={[
-          '引数 level（必須）は見出しレベルを1〜6の数値で設定してください',
-          '引数 text（必須）は見出しにしたいテキストを設定してください',
+          'ライブラリ Lenis （https://lenis.studiofreight.com/） を使用して慣性スクロールを実装している',
         ]}
       />
     </Section>
