--- a/src/components/parts/AccordionItem.astro
+++ b/src/components/parts/AccordionItem.astro
@@ -10,18 +10,24 @@ export interface Props {
 const { buttonText, bodyText } = Astro.props;
 ---
 
-<div class="root accordionItem">
-  <details class="item accordionItem__details">
-    <summary class="accordionItem__button">
-      <span class="button">{buttonText}</span>
-    </summary>
+<div class="root">
+  <div class="accordionItem">
+    <button
+      type="button"
+      class="button accordionItem__button"
+    >
+      {buttonText}
 
-    <div class="body accordionItem__body">
-      <div class="body__inner accordionItem__body__inner">
-        {bodyText.map(item => <p set:html={item} />)}
-      </div>
+      <span class="button__mark"><span class="accordionItem__button__mark">開く</span></span>
+    </button>
+
+    <div
+      class="body accordionItem__body"
+      aria-hidden="true"
+    >
+      {bodyText.map(item => <p set:html={item} />)}
     </div>
-  </details>
+  </div>
 </div>
 
 <style lang="scss">
@@ -30,7 +36,7 @@ const { buttonText, bodyText } = Astro.props;
   // ---------- 基底要素 ----------
   .root {
     width: 100%;
-    background: #fff;
+    border: 1px solid g.$base-color;
   }
 
   // ---------- アコーディオンを開閉するボタン要素 ----------
@@ -38,47 +44,66 @@ const { buttonText, bodyText } = Astro.props;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    width: 100%;
     padding: g.rem(20px);
-    background: #fff;
     position: relative;
-    cursor: pointer;
-    border: 1px solid g.$base-color;
+
+    @include g.mediaQuery() {
+      transform: translateX(g.rem(-4px)) translateZ(0);
+    }
   }
 
-  // 十字線
-  .button::before,
-  .button::after {
-    content: '';
-    display: block;
-    background: g.$base-color;
-    width: g.rem(15px);
-    height: g.rem(1px);
+  // ---------- アコーディオンボタン内の開閉を示すアイコン要素 ----------
+  .button__mark {
+    width: g.rem(30px);
+    height: g.rem(30px);
     margin: auto;
-    transition: 0.2s transform ease-in-out;
+    border: 1px solid g.$base-color;
+    border-radius: 50vh;
     position: absolute;
     top: 0;
     right: g.rem(20px);
     bottom: 0;
 
     @include g.mediaQuery() {
+      width: g.rem(35px);
+      height: g.rem(35px);
+    }
+
+    // 十字線
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      background: g.$base-color;
       width: g.rem(15px);
       height: g.rem(1px);
+      margin: auto;
+      transition: 0.2s transform ease-in-out;
+      position: absolute;
+      inset: 0;
+
+      @include g.mediaQuery() {
+        width: g.rem(15px);
+        height: g.rem(1px);
+      }
+    }
+
+    // 縦線
+    &::before {
+      transform: rotate(90deg);
     }
   }
 
-  // 縦線
-  .button::before {
-    transform: rotate(90deg);
-  }
-
   // ---------- アコーディオン本体要素が開いているとき ----------
-  .item[open] .button::before {
-    transform: rotate(0);
+  .button[aria-expanded='true'] {
+    .button__mark::before {
+      transform: rotate(0);
+    }
   }
 
   // ---------- アコーディオン本体要素 ----------
-  .body__inner {
-    padding: g.rem(20px);
+  .body {
+    padding: 0 g.rem(20px) g.rem(20px);
   }
 </style>
