--- a/src/components/parts/Toggle.astro
+++ b/src/components/parts/Toggle.astro
@@ -11,17 +11,25 @@ const { buttonText, bodyText } = Astro.props;
 ---
 
 <div class="root toggle">
-  <details class="item toggle__details">
-    <summary class="toggle__button">
-      <span class="button">{buttonText}</span>
-    </summary>
+  <div class="inner">
+    <button
+      type="button"
+      class="button toggle__button"
+    >
+      {buttonText}
 
-    <div class="body toggle__body">
-      <div class="body__inner toggle__body__inner">
+      <span class="button__mark"><span class="toggle__button__mark">開く</span></span>
+    </button>
+
+    <div
+      class="body toggle__body"
+      aria-hidden="true"
+    >
+      <div class="body__inner">
         {bodyText.map(item => <p set:html={item} />)}
       </div>
     </div>
-  </details>
+  </div>
 </div>
 
 <style lang="scss">
@@ -32,6 +40,11 @@ const { buttonText, bodyText } = Astro.props;
     width: 100%;
     margin-top: g.rem(40px);
     background: #fff;
+    border: 1px solid g.$base-color;
+  }
+
+  // ---------- 基底要素のインナー要素 ----------
+  .inner {
   }
 
   // ---------- トグルを開閉するボタン要素 ----------
@@ -39,51 +52,69 @@ const { buttonText, bodyText } = Astro.props;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    width: 100%;
     padding: g.rem(20px);
-    background: #fff;
     position: relative;
-    cursor: pointer;
-    border: 1px solid g.$base-color;
+
+    @include g.mediaQuery() {
+      transform: translateX(g.rem(-4px)) translateZ(0);
+    }
   }
 
-  // 十字線
-  .button::before,
-  .button::after {
-    content: '';
-    display: block;
-    background: g.$base-color;
-    width: g.rem(15px);
-    height: g.rem(1px);
+  // ---------- トグルボタン内の開閉を示すアイコン要素 ----------
+  .button__mark {
+    width: g.rem(30px);
+    height: g.rem(30px);
     margin: auto;
-    transition: 0.2s transform ease-in-out;
+    border: 1px solid g.$base-color;
+    border-radius: 50vh;
     position: absolute;
     top: 0;
     right: g.rem(20px);
     bottom: 0;
 
     @include g.mediaQuery() {
+      width: g.rem(35px);
+      height: g.rem(35px);
+    }
+
+    // 十字線
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      background: g.$base-color;
       width: g.rem(15px);
       height: g.rem(1px);
+      margin: auto;
+      transition: 0.2s transform ease-in-out;
+      position: absolute;
+      inset: 0;
+
+      @include g.mediaQuery() {
+        width: g.rem(15px);
+        height: g.rem(1px);
+      }
+    }
+
+    // 縦線
+    &::before {
+      transform: rotate(90deg);
     }
   }
 
-    // 縦線
-  .button::before {
-    transform: rotate(90deg);
-  }
-
   // ---------- トグル本体要素が開いているとき ----------
-  .item[open] .button::before {
-    transform: rotate(0);
+  .button[aria-expanded='true'] {
+    .button__mark::before {
+      transform: rotate(0);
+    }
   }
 
   // ---------- トグル本体要素 ----------
   .body {
-    overflow: hidden;
+    padding: 0 g.rem(20px) g.rem(20px);
   }
 
   .body__inner {
-    padding: g.rem(20px);
   }
 </style>
