feat: details 要素、 summary 要素を使用した ToggleNew コンポーネントを作成

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -7,6 +7,7 @@ import Text from '@src/components/parts/Text.astro';
 import MediaImage from '@src/components/parts/MediaImage.astro';
 import LinkButton from '@src/components/parts/LinkButton.astro';
 import Toggle from '@src/components/parts/Toggle.astro';
+import ToggleNew from '@src/components/parts/ToggleNew.astro';
 import Modal from '@src/components/parts/Modal.astro';
 import Accordion from '@src/components/templates/Accordion.astro';
 import Tab from '@src/components/parts/Tab.astro';
@@ -219,6 +220,37 @@ import TextTransition from '@src/components/parts/TextTransition.astro';
           'トグル機能を制御するコンポーネントです',
           '引数 buttonText（必須）はトグルを開閉するボタンに表示するテキストを設定します',
           '引数 bodyText（必須）はトグルで開閉される要素に表示するテキストを設定します',
+        ]}
+      />
+    </Section>
+
+    <Section gray={true}>
+      <Heading
+        level={2}
+        text="ToggleNew コンポーネント"
+      />
+
+      <ToggleNew
+        buttonText="トグルボタン"
+        bodyText={['テキストテキストテキスト', 'テキストテキスト']}
+      />
+
+      <ToggleNew
+        buttonText="トグルボタン"
+        bodyText={['テキストテキストテキスト', 'テキストテキスト']}
+      />
+
+      <Heading
+        level={3}
+        text="コンポーネント説明"
+      />
+
+      <List
+        text={[
+          'トグル機能を制御するコンポーネントです',
+          '引数 buttonText（必須）はトグルを開閉するボタンに表示するテキストを設定します',
+          '引数 bodyText（必須）はトグルで開閉される要素に表示するテキストを設定します',
+          'Toggle コンポーネントとは使用している HTML 要素が異なり、details 要素、 summary 要素を使用しています',
         ]}
       />
     </Section>
